update portfolio page

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <style>
-      html, body, #root, #root>div {
+      html, body, #root {
         height: 100%;
         margin: 0;
       }
